Fix article excerpt word wrapping

--- a/design/articles.css
+++ b/design/articles.css
@@ -6,6 +6,7 @@
 
 .Article.ClearFix {
     display: inline-table;
+    table-layout: fixed;
     width: 100%;
 }
 
